added mongoengine for playerlists and player data

--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,9 @@ name = "pypi"
 python-valve = "*"
 "discord.py" = "*"
 python-dotenv = "*"
+mongoengine = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.11"
